# FPAAutomation

./: .gitignore  LICENSE.txt  Testexecution.txt  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
Shell_FE_Appium_Core/: AppiumBase.py
Shell_FE_Appium_Core/Utilities/: AndroidUtilities.py  AssertUtilities.py  DbUtilities.py  FileUtilities.py  LoggingUtilities.py  WaitUtilities.py  iOSUtilities.py
Shell_FE_Behave_Tests/: Suite.py  Testexecution.txt  behave.ini  browserstack.json  config.ini  pavement.py  rerun.txt
Shell_FE_Behave_Tests/TestData/: Appinfo.json  FSPTestData.json  MultiDevice.json  NewJson.json  SecretIds.json  TestData1.xlsx  TestData2.json  TestData3.xlsx  TestData4.csv  TestData5.xml  TestData6.xml  TestData7.xml  account_id.json  creds.json  secret.key
Shell_FE_Behave_Tests/Utilities/: CommonStaticHelper.py  DriverHelper.py  FPADatabaseHelper.py  FPASeleniumHelper.py  FPAWaitHelper.py
Shell_FE_Behave_Tests/features/: Accessibility.feature  AccountCreation.feature  AccountCreationApi.feature  ActualProcessing.feature  AndroidDemoFeature.feature  BasicApiValidation.feature  BingSearch.feature  DBvalidationfeature.feature  DatabaseValidation.feature  Documents.feature  EncryptionDecryption.feature  EnteredInDEX.feature  FPALogin.feature  FPAReconcilation.feature  FailedToEnterInDEX.feature  FileUtilityValidation.feature  Filecomparison.feature  (+20 more)
Shell_FE_Python_Automation/: requirements.txt  setup.cfg  setup.py
Shell_FE_Requests_Core/: RequestsBase.py
Shell_FE_Selenium/: SeleniumBase.py
Shell_FE_Selenium_Core/: SeleniumBase.py
(+272 files in other folders)
