[metadata]
;name = Shell_FE_Selenium_Core
;version = 1.0.0a1
;author = Praveen Kumar Appusamy
;author_email = praveen.kumara@shell.com
;description = Selenium Core package to be used along with the Shell FE Behave framework for UI automation.
;long_description = file: README.md
;long_description_content_type = text/markdown
;license = Proprietary
;classifiers =
;    License :: Proprietary License
;    Programming Language :: Python :: 3.9
;    Operating System :: OS Independent
description-file = README.md

;[options]
;packages = find:
;python_requires = >=3.9
;install_requires =
;    selenium
;    webdriver-manager
;    msedge-selenium-tools
;    openpyxl
